# autonomous-coding-ralph-loop

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  init.sh  main.py  pyproject.toml  todos.db
.github/workflows/: ci.yml
app/: database.py  models.py
example-output/: guardrails.md  prd.json  progress.md  qa_result.json  reflections.md  sessions.jsonl
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ralph/: __init__.py  checkpoint.py  cli.py  config.py  dashboard.py  formatting.py  github_pr.py  incremental_test.py  indexer.py  learning.py  loop.py  mcp_tools.py  models.py  observability.py  parallel.py  reflexion.py  routing.py  sandbox.py  security.py  shipper.py
runs/ralph_dea31878/: init.sh  pyproject.toml  todos.db
runs/ralph_dea31878/app/: main.py  models.py
runs/ralph_dea31878/app/routers/: todos.py
runs/ralph_dea31878/tests/: conftest.py  test_app.py  test_conftest.py  test_create.py  test_database.py  test_infrastructure.py  test_models.py
tests/: conftest.py  test_app.py  test_checkpoint.py  test_completion.py  test_config.py  test_create.py  test_dashboard.py  test_delete.py  test_e2e_loop.py  test_filtering.py  test_formatting.py  test_github_pr.py  test_incremental.py  test_indexer.py  test_memory.py  test_models.py  test_parallel.py  test_polish.py  test_providers.py  test_qa.py  test_read.py  test_reflexion.py  test_routing.py  test_safety.py  test_sandbox.py  test_shipper.py  test_skills.py  test_spec.py  test_update.py  test_validation.py
todo-app-test/: .gitignore
(+53 files in other folders)
